# neurobridge-api

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
analysis/: artifact_rejection.py  attractors.py  bursts.py  catastrophic_forgetting.py  closed_loop.py  comparative.py  connectivity.py  consciousness_metrics.py  consolidation.py  criticality.py  curriculum.py  digital_twin.py  effective_connectivity.py  emergence.py  energy_landscape.py  ethical_assessment.py  experiment_tracker.py  fingerprint.py  functional_connectome.py  genetic_programming.py  grant_matcher.py  habituation.py  homeostatic_plasticity.py  hybrid_ai.py  information_flow.py  information_theory.py  integrity_report.py  japanese_vowels.py  llm_optimizer.py  loader.py  memory_tests.py  metastability.py  ml_pipeline.py  morphological_computing.py  multi_bit_memory.py  multi_organoid.py  multiscale.py  network_motifs.py  neural_architecture_search.py  organoid_iq.py  (+26 more)
analysis/protocols/: brainoware_reservoir.py  cartpole_coaching.py  center_activity.py  dishbrain_pong.py  dopamine_reinforcement.py
docs/: ANALYSIS_GUIDE.md  API_REFERENCE.md  QUICKSTART.md
models/: schemas.py
neurobridge/: __init__.py  cli.py  core.py
scripts/: smoke_test.py
tests/: conftest.py  test_artifact_rejection.py  test_bursts.py  test_connectivity.py  test_criticality.py  test_digital_twin.py  test_discovery_modules.py  test_information_theory.py  test_loader.py  test_ml_pipeline.py  test_new_modules.py  test_novel_modules.py  test_report.py  test_spectral.py  test_spikes.py  test_stats.py
